# crs-ws2024

./: 0_crs_intro.ipynb  1_venus.ipynb  2_icy_satellites.ipynb  3_small_bodies.ipynb  4_utilities-crs.ipynb  README.md  crs_data_info_2024-GMAP-winter-school.md  pyproject.toml  requirements.txt  requirements.yml
data/: ganymede_nomenclature.csv
