[tool.poetry]
name = "crs-ws2024"
version = "0.1.0"
description = ""
authors = ["Angelo Pio Rossi <aprossi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
pyproj = "^3.6.0"
cartopy = "^0.22.0"
rasterio = "^1.3.8"
geopandas = "^0.13.2"
matplotlib = "^3.7.3"
owslib = "^0.29.2"
jupyterlab-citation-manager = "^0.3.2"
ipyleaflet = "^0.17.4"
gdal = "^3.7.2"
planetary-coverage = "^1.1.0"
pyvista = "^0.42.2"
pykdtree = "^1.3.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
